# darkreach

./: .dockerignore  .env.example  .gitignore  .sops.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.fleet.yml  plan.md
.github/: CODEOWNERS  labeler.yml
deploy/: CLAUDE.md  RECOVERY.md  ai.darkreach.operator.plist  darkreach-alert.service  darkreach-alert.sh  darkreach-alert.timer  darkreach-backup.service  darkreach-backup.timer  darkreach-certbot-renew.service  darkreach-certbot-renew.timer  darkreach-coordinator.service  darkreach-logrotate.conf  darkreach-operator.service  darkreach-sudoers  darkreach-worker@.service  deploy.sh  docker-compose.openclaw.yml  pg-backup.sh  production-deploy.sh  ssh_config.example  worker-deploy.sh
docs/: CLAUDE.md  onboarding-david.md
frontend/: .env.example  package-lock.json  package.json  playwright.config.ts
frontend/wasm/: Cargo.toml
frontend/wasm/src/: lib.rs
gwnum-sys/: README.md
scripts/: agent  commit-msg  decrypt-secrets.sh  dev-caddy-setup.sh  dev-caddy.sh  init-db-docker.sh  install-operator.sh  pre-push  setup.sh
secrets/: README.md  env.enc.yaml  infra.enc.yaml
src/: agent.rs  agent_daemon.rs  ai_engine.rs  aurifeuillean.rs  batch_gcd.rs  bignum.rs  calibration.rs  carol_kynea.rs  certificate.rs  checkpoint.rs  classify.rs  cli.rs  cost_model.rs  cullen_woodall.rs  ecm.rs  events.rs  factorial.rs  fleet.rs  flint.rs  gen_fermat.rs  gerbicz.rs  kbn.rs  lib.rs  log_layer.rs  main.rs  metrics.rs  near_repdigit.rs  operator.rs  p1.rs  palindromic.rs  pg_worker.rs  (+18 more)
(+316 files in other folders)
